Add Joda-Convert annotations (#120)
New optional dependency, mandatory on Scala